<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="270dp"
                        android:layout_gravity="center"
                        android:background="#3B393A"
                        android:orientation="vertical"
                        android:padding="@dimen/spacer_large">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/spacer_normal"
                            android:paddingHorizontal="@dimen/spacer_small"
                            android:src="@drawable/logo" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_search_product_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="@dimen/spacer_normal"
                            android:layout_marginTop="@dimen/spacer_normal"
                            android:background="@drawable/bg_edit_text_kitalulus_search"
                            android:drawableStart="@drawable/ic_baseline_search_24"
                            android:drawablePadding="@dimen/spacer_small"
                            android:drawableTint="#A6A4A4"
                            android:focusable="false"
                            android:hint="@string/cari_barang"
                            android:inputType="textPersonName"
                            android:paddingHorizontal="@dimen/spacer_medium"
                            android:paddingVertical="@dimen/spacer_l_small"
                            android:textSize="@dimen/text_small_body" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/spacer_large"
                        android:layout_marginTop="-90dp"
                        android:background="@drawable/bg_card_rounded"
                        android:orientation="vertical"
                        android:paddingVertical="@dimen/spacer_normal">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_categories_product"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/spacer_normal" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/spacer_normal"
                            android:baselineAligned="false"
                            android:visibility="gone"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/categories_electronic_main"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:src="@drawable/ic_category_electronic" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    style="@style/SourceSansProTextRegular"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/spacer_small"
                                    android:text="@string/elektronik"
                                    android:textAlignment="center"
                                    android:textColor="#424242"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/categories_sport_main"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:src="@drawable/ic_category_sport" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    style="@style/SourceSansProTextRegular"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/spacer_small"
                                    android:text="@string/alat_olahraga"
                                    android:textAlignment="center"
                                    android:textColor="#424242"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/categories_shirt_main"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:src="@drawable/ic_category_shirt" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    style="@style/SourceSansProTextRegular"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/spacer_small"
                                    android:text="@string/pakaian"
                                    android:textAlignment="center"
                                    android:textColor="#424242"
                                    android:textStyle="bold" />

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/spacer_normal"
                            android:layout_marginTop="@dimen/spacer_normal"
                            android:visibility="gone"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/categories_music_main"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:src="@drawable/ic_category_music" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    style="@style/SourceSansProTextRegular"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/spacer_small"
                                    android:text="@string/alat_musik"
                                    android:textAlignment="center"
                                    android:textColor="#424242"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/categories_outdoor_main"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:src="@drawable/ic_category_outdor" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    style="@style/SourceSansProTextRegular"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/spacer_small"
                                    android:text="@string/outdor"
                                    android:textAlignment="center"
                                    android:textColor="#424242"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/categories_event_main"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:src="@drawable/ic_category_speaker" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    style="@style/SourceSansProTextRegular"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/spacer_small"
                                    android:text="@string/alat_event"
                                    android:textAlignment="center"
                                    android:textColor="#424242"
                                    android:textStyle="bold" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacer_large"
                        app:cardCornerRadius="@dimen/card_corner_radius_large">

                        <com.synnapps.carouselview.CarouselView
                            android:id="@+id/banner_button_carouselview"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            app:fillColor="#C5C5C5"
                            app:pageColor="@color/black"
                            app:radius="5dp"
                            app:slideInterval="3000"
                            app:strokeWidth="1dp" />

                    </androidx.cardview.widget.CardView>

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/SourceSansProTextRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/spacer_normal"
                        android:layout_marginTop="@dimen/spacer_large"
                        android:text="@string/rekomendasi"
                        android:textColor="#94B039"
                        android:textSize="@dimen/text_large_body"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_new_product_main"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/SourceSansProTextRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/spacer_normal"
                        android:layout_marginTop="@dimen/spacer_large"
                        android:text="@string/terbaru"
                        android:textColor="#94B039"
                        android:textSize="@dimen/text_large_body"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_recommendation_main"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
